Moment de doute sur l'interet de la gestion de projet -_-

--- a/rapport/rapport.tex
+++ b/rapport/rapport.tex
@@ -147,7 +147,7 @@ des fichiers pour facilité leur accès et leur analyse.
 
 \chapter{Gestion de projet}
 \lipsum
-\input{tableaudebord.tex}
+%\input{tableaudebord.tex}
 \section{Nos objectifs}
 \lipsum
 \chapter{Présentation des notions}
