--- a/rapport/tableaudebord.tex
+++ b/rapport/tableaudebord.tex
@@ -1,12 +1,12 @@
 \section{Tableau de bord}
 
 \begin{table}[h]
-\begin{tabular}{lllllll}
+\begin{tabular}{|*{7}{c|}}
 \hline
-\multicolumn{7}{c}{Tableau de bord}                                  \\\hline
-Semaine &\vline\hspace{1mm} Lundi &\vline\hspace{1mm} Mardi &\vline\hspace{1mm}
-Mercredi &\vline\hspace{1mm} Jeudi &\vline\hspace{1mm} Vendredi &\vline\hspace{1mm} Commentaires \\\hline
-1       &       &       &          &       &          &              \\\hline
+\multicolumn{7}{|c|}{Tableau de bord}                                  \\\hline
+\textbf{\#} & Lundi & Mardi & Mercredi & Jeudi & Vendredi & Commentaires \\\hline
+1 & \multicolumn{3}{c}{\textbf{Découverte du projet}}& & $\times$ &
+Participation à la réunion d'équipe\\ Installation de ma machine perso \\ Découverte de l'infrastructure réseau \\\hline
 2       &       &       &          &       &          &              \\\hline
 3       &       &       &          &       &          &              \\\hline
 4       &       &       &          &       &          &              \\\hline
@@ -17,7 +17,7 @@ Mercredi &\vline\hspace{1mm} Jeudi &\vline\hspace{1mm} Vendredi &\vline\hspace{1
 9       &       &       &          &       &          &              \\\hline
 10      &       &       &          &       &          &              \\\hline
 11      &       &       &          &       &          &              \\\hline
-12      &       &       &          &       &          &             
+12      &       &       &          &       &          &            \\\hline 
 \end{tabular}
 \caption{Tableau de bord}
 \centering
