Gros ajout logastash + vocabulaire a completer

--- a/rapport/glossaire.tex
+++ b/rapport/glossaire.tex
@@ -30,6 +30,11 @@
                              description={Dans la terminologie elasticsearch, un shard est un index ou un morceau d'index. C'est un index au sens lucene du terme. Il existe deux types de shards, des shards primaires et des shards répliqués. Un shard primaire peut indexer de nouvelles données alors qu'un shard repliqué sert seulement de failover, il peut également être utilisé pour accélérer les réponses aux requêtes.
 }}
 
+
+\newglossaryentry{thread}{name={thread},
+                             description={explication thread processus etc.. 
+}}
+
 \newglossaryentry{type}{name={type},
                              description={Un type dans la terminologie elasticsearch est l'équivalent d'une table dans le modèle relationnel. Il est équivalent dans la mesure où il possède des champs contenant des valeurs
 }}
