Ajout de manquement dans logstash trop fatigué pour les faires maintenant

--- a/rapport/logstash.tex
+++ b/rapport/logstash.tex
@@ -54,6 +54,7 @@ rubydebug, collectd ou bien plus intéressant pour nous netflow.
 
 
 %Explications supplémentaires sur les filtres
+% les plugins et les patterns par défaut?
 
 \subsubsection{Tolérance de pannes}
 Vos logs sont \textbf{importants}, c'est la raison d'être de Logstash, il ne souhaite 
