push de l'inconnue avec groktestv1

--- a/rapport/logstash.tex
+++ b/rapport/logstash.tex
@@ -44,10 +44,10 @@ qui prendra typiquement en entrée le clavier.
 Il est possible d'implémenter de nouveaux plugins en ruby afin de les ajouter à
 notre logstash.
 
-Il existe également un \textit{pseudo-bloc} qui peut s'insérer dans les autres, ce bloc, \emph{codec} 
-permet la de gérer la \textit{représentation des données} c'est à dire qu'un codec
-est capable de lire ou d'écrire dans une syntaxe particulière comme par exemple 
-rubydebug, collectd ou bien plus intéressant pour nous netflow.
+Il existe également un \textit{pseudo-bloc} qui peut s'insérer dans les autres, ce 
+bloc, \emph{codec} permet la de gérer la \textit{représentation des données} c'est 
+à dire qu'un codec est capable de lire ou d'écrire dans une syntaxe particulière 
+comme par exemple rubydebug, collectd ou bien plus intéressant pour nous, netflow.
 
 %wtf why?
 %et les types ??
@@ -146,6 +146,8 @@ et évidemment la clef qui va bien\footnote{blablabla une clé ça sert à balba
 
 wget -qO - https://packages.elasticsearch.org/GPG-KEY-elasticsearch | sudo apt-key add -
 
+\subsection{Installation de plugins tiers}
+Procédure pour l'installation d'un plugin tiers
 
 
 \section{Utilisation basique}
