--- a/rapport/logstash.tex
+++ b/rapport/logstash.tex
@@ -150,6 +150,12 @@ wget -qO - https://packages.elasticsearch.org/GPG-KEY-elasticsearch | sudo apt-k
 Procédure pour l'installation d'un plugin tiers
 
 
+\section{Grammaire et conjugaison}
+
+Les fichiers de confs et leurs fonctionnement + interaction entre plugins et etc...
+
+
+
 \section{Utilisation basique}
 
 \section{Mon serveur central}
