Mise en page et tentative de mise en page diverses

--- a/rapport/codeconf.tex
+++ b/rapport/codeconf.tex
@@ -37,27 +37,25 @@ xleftmargin=0.1\linewidth
 language=ruby,
 numbers=left,
 numberstyle=\tiny,
-backgroundcolor=\color{yellow!20},
+backgroundcolor=\color{brown},
 keywordstyle=\color{blue!50!green!50}\bfseries,
 commentstyle=\color{black},
 stringstyle=\color{red},
 showstringspaces=false,
-basicstyle=\small\color{blue},
+basicstyle=\inco\color{blue},
 captionpos=b,
 tabsize=2,
 frame=tb,
 breaklines=true
 columns=fullflexible,
-linewidth=0.9\linewidth,
-xleftmargin=0.1\linewidth
 }
 
 \lstdefinestyle{code}{
-language=bash,
+%language=bash,
 numbers=left,
 numberstyle=\tiny\color{black},
 basicstyle=\inco\color{white}
-%numbersep=3pt,
+numbersep=3pt,
 frame=tb,
 breaklines=true
 columns=fullflexible,
