--- a/rapport/glossaire.tex
+++ b/rapport/glossaire.tex
@@ -1,3 +1,6 @@
+\newglossaryentry{flag}{name={flag},
+                             description={Un drapeau, dans la dénomination logstash, le flag représente une option passé en argument exemple : -w.
+}}
 
 \newglossaryentry{logs}{name={logs},
                              description={Un log c'est une buche !
