--- a/rapport/rapport.tex
+++ b/rapport/rapport.tex
@@ -44,7 +44,7 @@
 \fontfamily{phv}\fontseries{b}\fontsize{10}{22}\selectfont}
 \newcommand{\inco}{%
 \fontfamily{\ttdefault}\fontseries{b}\fontsize{10}{10}\selectfont}
-
+\newcommand{\ipath}[1]{{\inco \normalsize {#1}}}
 
 %%% header & footer
 % \leftmark : afficher nom section
