--- a/rapport/rapport.tex
+++ b/rapport/rapport.tex
@@ -131,6 +131,7 @@ des fichiers pour facilité leur accès et leur analyse.
 \chapter{Définitions}
 
 \part{Les logiciels}
+\chapter{Logstash}
 \input{logstash.tex}
 
 
