mise en page debut

--- a/rapport/sources.tex
+++ b/rapport/sources.tex
@@ -1,43 +1,40 @@
 Web
 Introduction généraliste à ELK \\
-
-https://wooster.checkmy.ws/2014/04/elk-elasticsearch-logstash-kibana/
+\url{https://wooster.checkmy.ws/2014/04/elk-elasticsearch-logstash-kibana/}
 
 Explications sur les moteurs d'indexation/elasticsearch\\
-https://zestedesavoir.com/articles/120/elasticsearch-maintenant-en-version-14/
+\url{https://zestedesavoir.com/articles/120/elasticsearch-maintenant-en-version-14/}
 
-Articles sur les performances des SGBD vs moteurs d'indexation
-http://jolicode.com/blog/elasticsearch-comme-nouveau-standard-de-la-recherche-applicative
+Articles sur les performances des SGBD vs moteurs d'indexation\\
+\url{http://jolicode.com/blog/elasticsearch-comme-nouveau-standard-de-la-recherche-applicative}
 
 
 Documentation de logstash\\
-http://logstash.net/docs/1.4.2/
-http://logstash.net/docs/1.4.2/flags
+\url{http://logstash.net/docs/1.4.2/}
+\url{http://logstash.net/docs/1.4.2/flags}
 
-Installation de logstash
-http://www.elastic.co/guide/en/elasticsearch/reference/1.4/setup-repositories.html
+Installation de logstash\\
+\url{http://www.elastic.co/guide/en/elasticsearch/reference/1.4/setup-repositories.html}
 \\ et un peu d'astuce ou bien \\
-https://github.com/elastic/logstash
+\url{https://github.com/elastic/logstash}
 \\ et un peu d'huile de coude
 
-
 Debugger pour le filtre grok\\
-http://grokdebug.herokuapp.com/
-
+\url{http://grokdebug.herokuapp.com/}
 
 Documentation d'Elasticsearch\\
-http://www.elastic.co/guide/en/elasticsearch/reference/current/index.html\\
-http://www.elastic.co/guide/en/elasticsearch/guide/current/index.html
-http://www.elastic.co/guide/en/elasticsearch/reference/1.x/glossary.html
+\url{http://www.elastic.co/guide/en/elasticsearch/reference/current/index.html}\\
+\url{http://www.elastic.co/guide/en/elasticsearch/guide/current/index.html}
+\url{http://www.elastic.co/guide/en/elasticsearch/reference/1.x/glossary.html}
 
-Clustering Elasticsearch
-http://blog.trifork.com/2014/01/07/elasticsearch-how-many-shards/
-http://stackoverflow.com/questions/12409438/when-do-you-start-additional-elasticsearch-nodes
+Clustering Elasticsearch\\
+\url{http://blog.trifork.com/2014/01/07/elasticsearch-how-many-shards/}
+\url{http://stackoverflow.com/questions/12409438/when-do-you-start-additional-elasticsearch-nodes}
 
 
-Documentation de Kibana
-http://www.elastic.co/guide/en/kibana/current/
-https://github.com/elastic/kibana/tree/master/docs
+Documentation de Kibana\\
+\url{http://www.elastic.co/guide/en/kibana/current/}
+\url{https://github.com/elastic/kibana/tree/master/docs}
 
 
 Livres\\
