mise en page et tournure de phrase

--- a/rapport/rapport.tex
+++ b/rapport/rapport.tex
@@ -1,6 +1,5 @@
 \documentclass[a4paper,12pt,one side,titlepage]{report}
 
-
 %en francais
 \usepackage[T1]{fontenc}
 \usepackage[utf8]{inputenc}
@@ -69,7 +68,7 @@
 
 
 \input{./glossaire.tex}
-%
+
 \makeglossaries
 
 \begin{document}
@@ -133,6 +132,9 @@ des fichiers pour facilité leur accès et leur analyse.
 \part{Les logiciels}
 \chapter{Logstash}
 \input{logstash.tex}
+
+\chapter{Elasticsearch}
+\input{elasticsearch.tex}
 
 
 \part{Annexes}
