ajout de ligne pour l'impression (negatif couleur)

--- a/rapport/codeconf.tex
+++ b/rapport/codeconf.tex
@@ -54,12 +54,14 @@ columns=fullflexible,
 %language=bash,
 numbers=left,
 numberstyle=\tiny\color{black},
-basicstyle=\inco\color{white}
+basicstyle=\inco\color{white},
+%basicstyle=\inco\color{black},%for printing
 numbersep=3pt,
 frame=tb,
 breaklines=true
 columns=fullflexible,
 backgroundcolor=\color{black},
+%backgroundcolor=\color{white},%for printing
 %linewidth=0.9\linewidth,
 %xleftmargin=0.1\linewidth
 }
