--- a/rapport/sources.tex
+++ b/rapport/sources.tex
@@ -1,50 +1,50 @@
-Web
-Introduction généraliste à ELK \\
-\url{https://wooster.checkmy.ws/2014/04/elk-elasticsearch-logstash-kibana/}
+{\huge Web}\\[5mm]
 
-Explications sur les moteurs d'indexation/elasticsearch\\
-\url{https://zestedesavoir.com/articles/120/elasticsearch-maintenant-en-version-14/}
+\textbf{Introduction généraliste à ELK} \\
+\url{https://wooster.checkmy.ws/2014/04/elk-elasticsearch-logstash-kibana/}\\[1mm]
 
-Articles sur les performances des SGBD vs moteurs d'indexation\\
-\url{http://jolicode.com/blog/elasticsearch-comme-nouveau-standard-de-la-recherche-applicative}
+\textbf{Explications sur les moteurs d'indexation/elasticsearch}\\
+\url{https://zestedesavoir.com/articles/120/elasticsearch-maintenant-en-version-14/}\\[1mm]
+
+\textbf{Articles sur les performances des SGBD vs moteurs d'indexation}\\
+{\footnotesize \url{http://jolicode.com/blog/elasticsearch-comme-nouveau-standard-de-la-recherche-applicative}}\\[1mm]
 
 
-Documentation de logstash\\
-\url{http://logstash.net/docs/1.4.2/}
-\url{http://logstash.net/docs/1.4.2/flags}
+\textbf{Documentation de logstash générale}\\
+\url{http://logstash.net/docs/1.4.2/}\\
+\url{http://logstash.net/docs/1.4.2/flags}\\[1mm]
 
-Installation de logstash\\
-\url{http://www.elastic.co/guide/en/elasticsearch/reference/1.4/setup-repositories.html}
-\\ et un peu d'astuce ou bien \\
-\url{https://github.com/elastic/logstash}
-\\ et un peu d'huile de coude
+\textbf{Installation de logstash}\\
+{\footnotesize \url{http://www.elastic.co/guide/en/elasticsearch/reference/1.4/setup-repositories.html}}\\
+\url{https://github.com/elastic/logstash}\\[1mm]
 
-Debugger pour le filtre grok\\
-\url{http://grokdebug.herokuapp.com/}
+\textbf{Debugger pour le filtre grok}\\
+\url{http://grokdebug.herokuapp.com/}\\[1mm]
 
-Documentation d'Elasticsearch\\
+\textbf{Documentation d'Elasticsearch}\\
 \url{http://www.elastic.co/guide/en/elasticsearch/reference/current/index.html}\\
-\url{http://www.elastic.co/guide/en/elasticsearch/guide/current/index.html}
-\url{http://www.elastic.co/guide/en/elasticsearch/reference/1.x/glossary.html}
+\url{http://www.elastic.co/guide/en/elasticsearch/guide/current/index.html}\\
+\url{http://www.elastic.co/guide/en/elasticsearch/reference/1.x/glossary.html}\\[1mm]
 
-Clustering Elasticsearch\\
-\url{http://blog.trifork.com/2014/01/07/elasticsearch-how-many-shards/}
-\url{http://stackoverflow.com/questions/12409438/when-do-you-start-additional-elasticsearch-nodes}
-
-
-Documentation de Kibana\\
-\url{http://www.elastic.co/guide/en/kibana/current/}
-\url{https://github.com/elastic/kibana/tree/master/docs}
+\textbf{Clustering Elasticsearch}\\
+\url{http://blog.trifork.com/2014/01/07/elasticsearch-how-many-shards/}\\
+{\footnotesize \url{http://stackoverflow.com/questions/12409438/when-do-you-start-additional-elasticsearch-nodes}}\\[1mm]
 
 
-Livres\\
-The logstash book
-http://www.logstashbook.com/
-
-Rapport projet tutoré ASRALL sur les MOM
-http://webloria.loria.fr/~lnussbau/ptasrall2015/rapport\_a\_mom.pdf
+\textbf{Documentation de Kibana}\\
+\url{http://www.elastic.co/guide/en/kibana/current/}\\
+\url{https://github.com/elastic/kibana/tree/master/docs}\\[1mm]
 
 
-Vidéos
-Conférence de Jean Baptiste Favre, architecte réseau de blablacar.fr, à PSES 2014\\
-http://numaparis.ubicast.tv/videos/kibana/
+{\huge Livres}\\[5mm]
+
+\textbf{The logstash book}\\
+\url{http://www.logstashbook.com/}\\[1mm]
+
+\textbf{Rapport projet tutoré ASRALL sur les MOM}\\
+\url{http://webloria.loria.fr/~lnussbau/ptasrall2015/rapport\_a\_mom.pdf}\\[1mm]
+
+{\huge Vidéos}\\[5mm]
+
+\textbf{Conférence de Jean Baptiste Favre, architecte réseau blablacar, PSES 2014}\\
+\url{http://numaparis.ubicast.tv/videos/kibana/}
