--- a/rapport/rapport.tex
+++ b/rapport/rapport.tex
@@ -16,8 +16,8 @@
 \usepackage{amssymb}
 \usepackage{eurosym}
 \usepackage{float}
-\usepackage{geometry}
-%\usepackage[top=2.5cm,bottom=2.5cm,left=2.5cm,right=2.5cm]{geometry}
+%\usepackage[bottom=2.5cm,left=2.5cm,right=2.5cm]{geometry}
+\usepackage[bottom=2.8cm]{geometry}
 \usepackage{graphicx}
 \usepackage[acronym]{glossaries}
 \usepackage[hidelinks]{hyperref}
