Ajout image sense install

--- a/rapport/elasticsearch.tex
+++ b/rapport/elasticsearch.tex
@@ -42,6 +42,12 @@ git clone https://github.com/bleskes/sense.git
 Il suffit ensuite de l'activer dans chromium :\\ 
 chrome://extension => Developer mode => Load unpacked extension.
 
+\begin{figure}
+\includegraphics{senseinstall.png}
+\label{fig:senseinstall}
+\caption Plugin Sense installé dans chromium
+\end{figure}
+
 Et voilà !
 
 \subsection{Utilisation de Sense}
