Ajout image et lst,fig

--- a/rapport/elasticsearch.tex
+++ b/rapport/elasticsearch.tex
@@ -35,17 +35,18 @@ Installer ce logiciel est simple comme installer une extension Chrome\footnote{t
 tierce.
 Tout d'abord : récupérer le module à l'agresse  https://github.com/bleskes/sense 
 en utilisant par exemple : 
-\begin{lstlisting}[style=code]
+\begin{lstlisting}[style=code,label=lst:gitclonesense]
 git clone https://github.com/bleskes/sense.git
 \end{lstlisting}
 
 Il suffit ensuite de l'activer dans chromium :\\ 
 chrome://extension => Developer mode => Load unpacked extension.
 
-\begin{figure}
-\includegraphics{senseinstall.png}
+\begin{figure}[H]
+\center
+\includegraphics[width=15cm]{senseinstall.png}
 \label{fig:senseinstall}
-\caption Plugin Sense installé dans chromium
+\caption{Plugin Sense installé dans chromium}
 \end{figure}
 
 Et voilà !
