continuation de l'intro + correction orthographique

--- a/rapport/elasticsearch.tex
+++ b/rapport/elasticsearch.tex
@@ -33,7 +33,7 @@ par la société \emph{elastic}.
 \subsection{Installation}
 Installer ce logiciel est simple comme installer une extension Chrome\footnote{testé sur chromium}
 tierce.
-Tout d'abord : récupérer le module à l'agresse  https://github.com/bleskes/sense 
+Tout d'abord : récupérer le module à l'adresse \url{https://github.com/bleskes/sense}
 en utilisant par exemple : 
 \begin{lstlisting}[style=code,label=lst:gitclonesense]
 git clone https://github.com/bleskes/sense.git
