--- a/rapport/title.tex
+++ b/rapport/title.tex
@@ -12,7 +12,7 @@
 
 % Title
 \HRule \\[0.4cm]
-{ \Large \bfseries Analyse de log avec ELK\\[0.4cm] }
+{ \Large \bfseries Analyse de logs avec ELK\\[0.4cm] }
 
 \HRule \\[1.0cm]
 
@@ -37,9 +37,9 @@ Vincent \textsc{Delove}
 
 \begin{figure}[h]
     \centering
-    \includegraphics[scale=0.5]{logstash.png}
-    \hfill
     \includegraphics[scale=0.6]{elasticsearch.png}
+    \hfill
+    \includegraphics[scale=0.5]{logstash.png}
     \hfill
     \includegraphics[scale=1]{kibana.png}
     \\[20mm]
