--- a/rapport/rapport.tex
+++ b/rapport/rapport.tex
@@ -41,6 +41,8 @@
 \fontfamily{phv}\fontseries{b}\fontsize{8}{20}\selectfont}
 \newcommand{\belv}{%
 \fontfamily{phv}\fontseries{b}\fontsize{10}{22}\selectfont}
+\newcommand{\telv}{%
+\fontfamily{phv}\fontseries{l}\fontsize{12}{22}\selectfont}
 \newcommand{\inco}{%
 \fontfamily{\ttdefault}\fontseries{b}\fontsize{10}{10}\selectfont}
 \newcommand{\ipath}[1]{{\inco \normalsize {#1}}}
@@ -55,7 +57,7 @@
 \fancyhead[R]{\selv Équipe réseau Lothaire}%\includegraphics[width=60px]{openstack-logo.png}}
 
 \renewcommand{\footrulewidth}{0pt}
-\fancyfoot[C]{\belv Page \thepage\hspace{2px} / \pageref{LastPage}} 
+\fancyfoot[C]{\telv Page \thepage\hspace{2px} / \pageref{LastPage}} 
 \fancyfoot[L]{\includegraphics[height=20px]{elasticmini.png}}
 \fancyfoot[R]{\belv François \textsc{Dupont}}
 
