--- a/rapport/rapport.tex
+++ b/rapport/rapport.tex
@@ -46,6 +46,8 @@
 \newcommand{\inco}{%
 \fontfamily{\ttdefault}\fontseries{b}\fontsize{10}{10}\selectfont}
 \newcommand{\ipath}[1]{{\inco \normalsize {#1}}}
+\newcommand{\fnu}[1]{\footnote{\url{#1}}}
+
 
 %%% header & footer
 % \leftmark : afficher nom section
